tests/Front/SemanticError/02_GlobalDeclarationWithSameName.c
int32_t a;
char a;
void main() {
    a = 1;
}
